# pipeline-project

./: CMakeLists.txt  Jenkinsfile  build.sh
new-java-project/: Jenkinsfile  pom.xml
new-java-project/src/main/java/org/jacoco/examples/maven/java/: HelloWorld.java
new-java-project/src/main/webapp/: index.html
new-java-project/src/main/webapp/WEB-INF/: web.xml
src/: main.c
